RESOLVED FIXED310380
[iOS] Stop taking unnecessary Now Playing activity assertion
https://bugs.webkit.org/show_bug.cgi?id=310380
Summary [iOS] Stop taking unnecessary Now Playing activity assertion
Andy Estes
Reported 2026-03-20 12:48:35 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-20 12:48:44 PDT
Andy Estes
Comment 2 2026-03-20 12:49:53 PDT
EWS
Comment 3 2026-03-20 14:40:00 PDT
Committed 309634@main (167fea66125e): <https://commits.webkit.org/309634@main> Reviewed commits have been landed. Closing PR #61026 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.