[iOS] Stop taking unnecessary Now Playing activity assertion https://bugs.webkit.org/show_bug.cgi?id=310380 rdar://173022531

Reviewed by Eric Carlson.

Taking a Now Playing activity assertion in order to set a preferred state turned out to be
unnecessary. Instead, we can just set the preferred state directly.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::updateNowPlayingSuppression):

Canonical link: https://commits.webkit.org/309634@main